Dynamic-access coverage for com.alibaba.fastjson.JSONObject$SecureObjectInputStream (124/173)